# jupyterlab-webrtc-docprovider

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  .prettierrc  .yarnrc  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py  tsconfig.json  webpack.config.js
.github/: requirements-build.txt  requirements-lab.txt  requirements-test.txt
.github/workflows/: build.yml  check-release.yml
binder/: README.md  environment.yml  jupyter-lite.json  jupyter_config.json  overrides.json  postBuild
jupyterlab_webrtc_docprovider/: __init__.py  _version.py
jupyterlab_webrtc_docprovider/tests/: __init__.py  test_metadata.py
schema/: plugin.json
src/: _schema.ts  factory.ts  icons.ts  index.ts  manager.ts  plugin.ts  provider.ts  status.tsx  tokens.ts
style/: base.css  index.css
