[build-system]
requires = [
    "jupyter_packaging>=0.10,<1",
    "jupyterlab>=3.1,<4",
]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = [
    "jupyterlab_webrtc_docprovider/labextension/static/style.js",
]
ensured-targets = [
    "jupyterlab_webrtc_docprovider/labextension/package.json",
    "jupyterlab_webrtc_docprovider/labextension/static/style.js",
]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder"

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = [
    ".*",
    "jupyterlab_webrtc_docprovider/labextension/**",
    "package-lock.json",
    "yarn.lock",
]
